# ADAN

./: .clang-format  .gitignore  .install  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  Makefile  PKGBUILD  README.md  SimpleCalc  TODO.txt  a.out  adan.rb  build_asm.sh  clang_error.txt  compile_commands.json  core  dependencies.sh  grammar.ebnf  grammar.md  grammar.tab.c  grammar.tab.h  grammar.y  operators  push.sh  test_all_ops.adn  test_new_ops.adn  testing  while-loops  xmake.lua
.devcontainer/: devcontainer.json
ADANCompiler/: main.adn
_codeql_build_dir/: CMakeCache.txt  Makefile  adan  cmake_install.cmake
build-macos-arm64/: CMakeCache.txt  Makefile  adan  cmake_install.cmake
build-macos-x86_64/: ADAN-Mac-x86_64_Nightly  CMakeCache.txt  Makefile  cmake_install.cmake
build_verify/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: embed_libs.cmake  toolchain-macos-arm64.cmake  toolchain-macos-x86_64.cmake  toolchain-windows-x86_64.cmake
debian/: control  rules
diagrams/: intermediate-representation.txt  variable_assignment.txt
docs/: design.md  grammar.ebnf  grammar.txt  todo.txt  tools.txt
documents/: intermediate-representation.txt  notes.txt  todo.md  todo.txt  variable_assignment.txt
examples/: Math.adn  Playground.adn  README.md  SimpleCalc.adn  Variables.adn  adan.adn  casting.adn  feat.adn  hello_adan.adan  hello_adan.adn  http-server.adn  http.adn  my-program.adn  rng.adn  shell.adn  simple.adn
formal/: README.md
include/: adan.h  allocator.h  ast.h  buffer.h  codegen.h  codegen_arm64.h  codegen_tests.h  codegen_x86_64.h  common.h  compiler_flags.h  compiler_handler.h  diagnostic.h  diagnostics.h  error.h  errors.h  flags.h  fs.h  ir.h  lexer.h  lexer_src.h  lexer_tests.h  library.h  liveness.h  logs.h  parser.h  parser_tests.h  platform.h  preprocessor.h  semantic.h  stringUtils.h  string_utils.h  util.h
libs/: PLAN.md
man/: adan.1
notes/: getting-started.txt  lexical-analysis.txt  parsing.txt
research/: introduction.txt  lexical_analysis.txt  parser.txt  semantic_analysis.txt
samples/: add.adn  bool.adn  concat  concat.adn  hello  hello.adn  hello.ll  interpolation  interpolation.adn  operators.adn  ops.adn  testing.adn  while-loops.adn
scripts/: beautifier.py  codespaces.sh  format.py  (+7 more)
(+232 files in other folders)
